Adding priortizing of Docking and docked ships for attacking.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 Halite C++.VC.db
+.vs/Halite C++/v15/ipch/AutoPCH/dabd419f96b67402/MAP.ipch
+.vs/Halite C++/v15/ipch/AutoPCH/95c66c686d21cbaf/MYBOT.ipch
+.vs/Halite C++/v15/Browse.VC.db
+.vs/Halite C++/v15/Browse.VC.opendb
