--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Halite C++.VC.db
 .vs/Halite C++/v15/ipch/AutoPCH/95c66c686d21cbaf/MYBOT.ipch
 .vs/Halite C++/v15/Browse.VC.db
 .vs/Halite C++/v15/Browse.VC.opendb
+*.hlt
